Settings for Azure Custom Vision

--- a/PlantsRecognition_v1/PlantsRecognition_v1/appsettings.json
+++ b/PlantsRecognition_v1/PlantsRecognition_v1/appsettings.json
@@ -1,4 +1,9 @@
 {
+  "ApplicationSettings": {
+    "TrainingKey": "512196553cf84dd88daa8cd56a3037cb",
+    "PredictionKey": "a81cb2cc96014c8492c23eeee7b6cca7",
+    "PredictionURL": "https://southcentralus.api.cognitive.microsoft.com/customvision/v1.1/Prediction/24f0429c-a54a-4a40-b33e-f28bba8f0e44/image?iterationId=111b1b69-8393-4891-9917-9ba0e3e613ce"
+  }, 
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
